--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "gsap": "^3.12.7",
+    "ngx-bootstrap": "^11.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
